// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Latency with a basic license when data is loaded time comparison returns some data 1`] = `
Array [
  Object {
    "x": 1627974300000,
    "y": 22799,
  },
  Object {
    "x": 1627974360000,
    "y": 3227391,
  },
  Object {
    "x": 1627974420000,
    "y": 15565.2222222222,
  },
  Object {
    "x": 1627974480000,
    "y": 54307.5714285714,
  },
  Object {
    "x": 1627974540000,
    "y": 16655,
  },
  Object {
    "x": 1627974600000,
    "y": 9453,
  },
  Object {
    "x": 1627974660000,
    "y": 31119,
  },
  Object {
    "x": 1627974720000,
    "y": 15282.2,
  },
  Object {
    "x": 1627974780000,
    "y": 18709,
  },
  Object {
    "x": 1627974840000,
    "y": 12095,
  },
  Object {
    "x": 1627974900000,
    "y": 16291,
  },
  Object {
    "x": 1627974960000,
    "y": 13444.3333333333,
  },
  Object {
    "x": 1627975020000,
    "y": 13241.6666666667,
  },
  Object {
    "x": 1627975080000,
    "y": 25535,
  },
  Object {
    "x": 1627975140000,
    "y": 11024.6,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Latency with a basic license when data is loaded time comparison returns some data 2`] = `
Array [
  Object {
    "x": 1627974300000,
    "y": 34866.2,
  },
  Object {
    "x": 1627974360000,
    "y": 104799,
  },
  Object {
    "x": 1627974420000,
    "y": 36247,
  },
  Object {
    "x": 1627974480000,
    "y": 22207,
  },
  Object {
    "x": 1627974540000,
    "y": 80191,
  },
  Object {
    "x": 1627974600000,
    "y": 11520.4545454545,
  },
  Object {
    "x": 1627974660000,
    "y": 47031.8888888889,
  },
  Object {
    "x": 1627974720000,
    "y": 30249.6666666667,
  },
  Object {
    "x": 1627974780000,
    "y": 14868.3333333333,
  },
  Object {
    "x": 1627974840000,
    "y": 17199,
  },
  Object {
    "x": 1627974900000,
    "y": 19837.2222222222,
  },
  Object {
    "x": 1627974960000,
    "y": 19397.6666666667,
  },
  Object {
    "x": 1627975020000,
    "y": 22473.6666666667,
  },
  Object {
    "x": 1627975080000,
    "y": 11362.2,
  },
  Object {
    "x": 1627975140000,
    "y": 26319,
  },
]
`;
